# motion-by-aiselu

./: .gitignore  BUILD_FIXES_SUMMARY.md  CLAUDE.md  CONVERSATION_LOADING_FIXES.md  CONVERSATION_PERSISTENCE_SUMMARY.md  FINAL_BUILD_FIX.md  FIXES_APPLIED.md  QUICK_TEST.md  README.md  package-lock.json
backend/: .env.example  conftest.py  pyproject.toml  pytest.ini
backend/src/motion/: main.py
backend/src/motion/agents/soap_agents/: agent.py  message_types.py  prompts.py
backend/src/motion/tools/: exercise_illustration_tool.py
ios/MotionByAiselu/MotionByAiselu/: ContentView.swift  Info.plist  MotionByAiseluApp.swift
ios/MotionByAiselu/MotionByAiselu.xcodeproj/: project.pbxproj
ios/MotionByAiselu/MotionByAiselu/Assets.xcassets/Image.imageset/: Contents.json
ios/MotionByAiselu/MotionByAiselu/ConversationDataModel.xcdatamodeld/: Contents
ios/MotionByAiselu/MotionByAiselu/Models/: ChatModels.swift  MessageTypes.swift
ios/MotionByAiselu/MotionByAiselu/Services/: APIClient.swift  ConversationDataMigration.swift  ConversationExporter.swift  ConversationPersistenceService.swift  SimplePersistenceService.swift  SpeechRecognizer.swift
ios/MotionByAiselu/MotionByAiselu/Views/: ChatMessageView.swift  ChatView.swift  ClarificationView.swift  ConversationListView.swift  ExerciseSelectionView.swift  SOAPReportView.swift
